examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__assert_statements.snap
---
source: examples/ast-python/src/tests/corpus/statements.rs
expression: "get_ast(& db, file)"
---
ParsedAst {
    nodes: [
        Module {
            children: [
                AstNodeId {
                    id: 1,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
                AstNodeId {
                    id: 3,
                    _marker: PhantomData<ast_python::generated::CompoundStatement_SimpleStatement>,
                },
            ],
            _range: Range {
                start_byte: 1,
                end_byte: 22,
                start_point: Point {
                    row: 1,
                    column: 0,
                },
                end_point: Point {
                    row: 3,
                    column: 0,
                },
            },
            _id: 0,
            _parent: None,
            _is_missing: false,
        },
        SimpleStatement(
            AssertStatement(
                AssertStatement {
                    children: [
                        AstNodeId {
                            id: 2,
                            _marker: PhantomData<ast_python::generated::Expression>,
                        },
                    ],
                    _range: Range {
                        start_byte: 1,
                        end_byte: 9,
                        start_point: Point {
                            row: 1,
                            column: 0,
                        },
                        end_point: Point {
                            row: 1,
                            column: 8,
                        },
                    },
                    _id: 1,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        PrimaryExpression(
            Identifier(
                Identifier {
                    _range: Range {
                        start_byte: 8,
                        end_byte: 9,
                        start_point: Point {
                            row: 1,
                            column: 7,
                        },
                        end_point: Point {
                            row: 1,
                            column: 8,
                        },
                    },
                    _id: 2,
                    _parent: Some(
                        1,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        SimpleStatement(
            AssertStatement(
                AssertStatement {
                    children: [
                        AstNodeId {
                            id: 4,
                            _marker: PhantomData<ast_python::generated::Expression>,
                        },
                        AstNodeId {
                            id: 5,
                            _marker: PhantomData<ast_python::generated::Expression>,
                        },
                    ],
                    _range: Range {
                        start_byte: 10,
                        end_byte: 21,
                        start_point: Point {
                            row: 2,
                            column: 0,
                        },
                        end_point: Point {
                            row: 2,
                            column: 11,
                        },
                    },
                    _id: 3,
                    _parent: Some(
                        0,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        PrimaryExpression(
            Identifier(
                Identifier {
                    _range: Range {
                        start_byte: 17,
                        end_byte: 18,
                        start_point: Point {
                            row: 2,
                            column: 7,
                        },
                        end_point: Point {
                            row: 2,
                            column: 8,
                        },
                    },
                    _id: 4,
                    _parent: Some(
                        3,
                    ),
                    _is_missing: false,
                },
            ),
        ),
        PrimaryExpression(
            Identifier(
                Identifier {
                    _range: Range {
                        start_byte: 20,
                        end_byte: 21,
                        start_point: Point {
                            row: 2,
                            column: 10,
                        },
                        end_point: Point {
                            row: 2,
                            column: 11,
                        },
                    },
                    _id: 5,
                    _parent: Some(
                        3,
                    ),
                    _is_missing: false,
                },
            ),
        ),
    ],
}
