examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__assert_statements@assert a.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        SimpleStatement(
            AssertStatement(
                AssertStatement {
                    children: [
                        PrimaryExpression(
                            Identifier(
                                Identifier {
                                    [RANGE]
                                },
                            ),
                        ),
                    ],
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
