examples/ast-python/src/tests/corpus/snapshots/ast_python__tests__corpus__statements__async_functions@async def d(a:str="default", b=c) -> None:  return None.snap
---
source: src/tests/corpus/statements.rs
expression: module
---
Module {
    children: [
        CompoundStatement(
            FunctionDefinition(
                FunctionDefinition {
                    name: Identifier {
                        [RANGE]
                    },
                    body: Block {
                        alternative: [],
                        children: [
                            SimpleStatement(
                                ReturnStatement(
                                    ReturnStatement {
                                        children: Some(
                                            Expression(
                                                PrimaryExpression(
                                                    None(
                                                        None {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ),
                                            ),
                                        ),
                                        [RANGE]
                                    },
                                ),
                            ),
                        ],
                        [RANGE]
                    },
                    return_type: Some(
                        Type {
                            children: Expression(
                                PrimaryExpression(
                                    None(
                                        None {
                                            [RANGE]
                                        },
                                    ),
                                ),
                            ),
                            [RANGE]
                        },
                    ),
                    type_parameters: None,
                    parameters: Parameters {
                        children: [
                            TypedDefaultParameter(
                                TypedDefaultParameter {
                                    value: PrimaryExpression(
                                        String(
                                            String {
                                                children: [
                                                    StringStart(
                                                        StringStart {
                                                            [RANGE]
                                                        },
                                                    ),
                                                    StringContent(
                                                        StringContent {
                                                            children: [],
                                                            [RANGE]
                                                        },
                                                    ),
                                                    StringEnd(
                                                        StringEnd {
                                                            [RANGE]
                                                        },
                                                    ),
                                                ],
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                    name: Identifier {
                                        [RANGE]
                                    },
                                    Type: Type {
                                        children: Expression(
                                            PrimaryExpression(
                                                Identifier(
                                                    Identifier {
                                                        [RANGE]
                                                    },
                                                ),
                                            ),
                                        ),
                                        [RANGE]
                                    },
                                    [RANGE]
                                },
                            ),
                            DefaultParameter(
                                DefaultParameter {
                                    name: Identifier(
                                        Identifier {
                                            [RANGE]
                                        },
                                    ),
                                    value: PrimaryExpression(
                                        Identifier(
                                            Identifier {
                                                [RANGE]
                                            },
                                        ),
                                    ),
                                    [RANGE]
                                },
                            ),
                        ],
                        [RANGE]
                    },
                    [RANGE]
                },
            ),
        ),
    ],
    [RANGE]
}
